@@ -109,6 +109,7 @@ typedef enum _GstTTMLFontStyle {
   GST_TTML_FONT_STYLE_NORMAL,
   GST_TTML_FONT_STYLE_ITALIC,
   GST_TTML_FONT_STYLE_OBLIQUE,
+  GST_TTML_FONT_STYLE_REVERSE_OBLIQUE,
   GST_TTML_FONT_STYLE_UNKNOWN
 } GstTTMLFontStyle;
 
